Fix calculator alignment for padding
Previously the calculator container would take 100% of the height causing it's padding to extend to the full screen. Now the padding can be added around the calculator instead.

--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 #calculator-container {
   display: flex;
   align-items: center;
-  height: 100%;
   max-width: 20rem;
 }
 .button-column {
